--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
     <mavenVersion>3.1.1</mavenVersion>
     <surefire.version>2.22.2</surefire.version>
     <javaVersion>7</javaVersion>
+    <maven31xEclipseAether.version>0.9.0.M2</maven31xEclipseAether.version>
+    <maven31xEclipseSisu.version>0.3.4</maven31xEclipseSisu.version>
     <project.build.outputTimestamp>2020-08-05T13:26:53Z</project.build.outputTimestamp>
   </properties>
 
@@ -96,6 +98,12 @@
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-component-annotations</artifactId>
       <version>2.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -169,12 +177,14 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.plexus</groupId>
-        <artifactId>plexus-component-metadata</artifactId>
+        <groupId>org.eclipse.sisu</groupId>
+        <artifactId>sisu-maven-plugin</artifactId>
+        <version>0.3.4</version>
         <executions>
           <execution>
             <goals>
-              <goal>generate-metadata</goal>
+              <goal>main-index</goal>
+              <goal>test-index</goal>
             </goals>
           </execution>
         </executions>
